[gd_scene load_steps=3 format=3 uid="uid://nvkradf3yf3w"]

[ext_resource type="Script" uid="uid://cdoklmyr23aod" path="res://scripts/ui/main_menu.gd" id="1_sl1te"]
[ext_resource type="Texture2D" uid="uid://b4bsm1m7h8f5n" path="res://assets/sprites/Joust_title_final.png" id="2_fe2o3"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sl1te")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.121569, 0.0705882, 0.482353, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_fe2o3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 200.0
offset_top = 350.0
offset_right = 600.0
offset_bottom = 650.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, -40)
layout_mode = 2
theme_override_constants/shadow_offset_x = 24
theme_override_constants/shadow_offset_y = 24
theme_override_font_sizes/font_size = 64
text = "JOUSTING"
horizontal_alignment = 1

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"
